--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ set(CPACK_NSIS_INSTALLED_ICON_NAME ${ICON})
 set(CPACK_PACKAGE_ICON ${BANNER})
 set(CPACK_NSIS_MODIFY_PATH ON)
 set(CPACK_NSIS_DISPLAY_NAME "OpenGamma LibIZY")
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE.txt)
 
 include(CPack)
 
