--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,8 +30,9 @@ set(TESTS ${DEF_DOUBLE_TRIG} ${DEF_DOUBLE_ARITH} ${DEF_DOUBLE_EL} ${DEF_DOUBLE_H
 foreach(TEST ${TESTS})
   add_executable(${TEST} ${TEST}.c)
   target_link_libraries(${TEST} izy izyreference)
-  add_test(${TEST} ${TEST})
+  get_target_property(TEST_LOC ${TEST} LOCATION)
+  add_test(${TEST} ${TEST_LOC})
   if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    add_test(${TEST}_memcheck valgrind --leak-check=full --error-exitcode=1 ./${TEST})
+    add_test(${TEST}_memcheck valgrind --leak-check=full --error-exitcode=1 ${TEST_LOC})
   endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 endforeach()
