[MAT-74] Disabling windows test suppressions to see which are failing on the new buildbot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,10 @@ if(APPLE)
   configure_file(test/CTestCustom.apple CTestCustom.ctest)
 endif(APPLE)
 
-if(WIN32)
-  message(STATUS "Copying Windows test suppressions file.")
-  configure_file(test/CTestCustom.windows CTestCustom.ctest)
-endif(WIN32)
+#if(WIN32)
+#  message(STATUS "Copying Windows test suppressions file.")
+#  configure_file(test/CTestCustom.windows CTestCustom.ctest)
+#endif(WIN32)
 
 set(CPACK_GENERATOR "TGZ" "DEB" "RPM" "NSIS" "PackageMaker")
 set(CPACK_PACKAGE_NAME "libizy")
