--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,9 @@ if(APPLE)
   add_definitions(-DSLACK_TESTS)
 endif(ENDIF)
 
-if(LINUX)
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--rpath, -Wl,.")
-endif(LINUX)
+endif()
 
 set(CPACK_GENERATOR "TGZ" "DEB" "RPM" "NSIS" "PackageMaker")
 set(CPACK_PACKAGE_NAME "libizy")
