[MAT-425] Add in cmake export rules
The cmake export rules are added such that the key targets
made available by this library are directly exportable from the
build tree. A minor hack is applied to export the header file
location in the export file too.

The "izy.h" header is also modified to be C++ compatible.

--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -15,4 +15,14 @@ add_multitarget_library(izy
                         SOVERSION ${IZY_VERSION_MAJOR}
                         SOURCES ${IZYSRC}
                         LINK_MULTILIBRARIES izyreference
-                        TARGETS ${TARGET_TYPES})
+                        TARGETS ${TARGET_TYPES}
+                        DEPENDS ${INCLUDE_DIRS_TARGET})
+
+add_multitarget_export(izy
+                        EXPORTNAME "IZY_EXPORTS"
+                        TARGETS ${TARGET_TYPES}
+                       )
+
+
+FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "# Set IZY_INCLUDE_DIR for future use.\n")
+FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "set(IZY_INCLUDE_DIR \"${IZY_SOURCE_DIR}/include\")\n")
