--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,7 @@ set(DEF_COMPLEX_ARITH check_vz_add check_vz_sub check_vz_mul check_vz_div check_
 set(DEF_COMPLEX_EL check_vz_exp check_vz_ln check_vz_log10)
 set(DEF_COMPLEX_PWR check_vz_sqrt check_vz_pow check_vz_powx)
 
-set(TESTS ${DEF_DOUBLE_TRIG} ${DEF_DOUBLE_ARITH} ${DEF_DOUBLE_EL} ${DEF_DOUBLE_HYP} ${DEF_DOUBLE_SPECFUN} ${DEF_DOUBLE_PWR} ${DEF_DOUBLE_ROUND} ${DEF_COMPLEX_TRIG} ${DEF_COMPLEX_HYP} ${DEF_COMPLEX_PWR} ${DEF_COMPLEX_ARITH})
+set(TESTS ${DEF_DOUBLE_TRIG} ${DEF_DOUBLE_ARITH} ${DEF_DOUBLE_EL} ${DEF_DOUBLE_HYP} ${DEF_DOUBLE_SPECFUN} ${DEF_DOUBLE_PWR} ${DEF_DOUBLE_ROUND} ${DEF_COMPLEX_TRIG} ${DEF_COMPLEX_HYP} ${DEF_COMPLEX_EL} ${DEF_COMPLEX_PWR} ${DEF_COMPLEX_ARITH})
 
 
 foreach(TESTGROUP ${TESTS})
