[MAT-474] Export the source root for use in other cmake builds.
This adds the source root directory as a variable to the export
file such that it can be used in other cmake builds.

--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -26,3 +26,6 @@ add_multitarget_export(izy
 
 FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "# Set IZY_INCLUDE_DIR for future use.\n")
 FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "set(IZY_INCLUDE_DIR \"${IZY_SOURCE_DIR}/include\")\n")
+
+FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "# Set IZY_SRC_DIR for future use.\n")
+FILE(APPEND "${PROJECT_BINARY_DIR}/IZY_EXPORTS.cmake" "set(IZY_SRC_DIR \"${IZY_SOURCE_DIR}\")\n")
